# logcabin_raft_optimzations

./: .gitignore  CMakeLists.txt
Client/: Backoff.cc  Backoff.h  BackoffTest.cc  Client.cc  ClientImpl.cc  ClientImpl.h  ClientImplTest.cc  ClientTest.cc  LeaderRPC.cc  LeaderRPC.h  LeaderRPCMock.cc  LeaderRPCMock.h  LeaderRPCTest.cc  MockClientImpl.cc  MockClientImpl.h  MockClientImplTest.cc  ServerControl.cc  SessionManager.cc  SessionManager.h  SessionManagerTest.cc  Util.cc  UtilTest.cc
Core/: Buffer.cc  BufferTest.cc  Checksum.cc  ChecksumTest.cc  CompatHashTest.cc  ConditionVariable.cc  ConditionVariable.h  ConditionVariableTest.cc  Config.cc  ConfigTest.cc  Debug.cc  Debug.h  DebugTest.cc  Mutex.h  ProtoBuf.cc  ProtoBuf.h  ProtoBufTest.cc  Random.cc  RandomTest.cc  RollingStat.cc  RollingStat.h  RollingStatTest.cc  STLUtilTest.cc  StringUtil.cc  StringUtilTest.cc  ThreadId.cc  ThreadIdTest.cc  Time.cc  Time.h  TimeTest.cc  Util.cc  UtilTest.cc
Event/: File.cc  FileTest.cc  Loop.cc  Loop.h  LoopTest.cc  Signal.cc  Signal.h  SignalTest.cc  Timer.cc  Timer.h  TimerTest.cc
Examples/: TreeOps.cc
Protocol/: Client.proto
RPC/: Address.cc  Address.h  AddressTest.cc  ClientRPC.cc  ClientRPC.h  ClientRPCTest.cc  ClientServerTest.cc  ClientSession.cc  ClientSession.h  ClientSessionTest.cc  MessageSocket.cc  MessageSocket.h  MessageSocketTest.cc  OpaqueClientRPC.cc  OpaqueClientRPC.h  OpaqueClientRPCTest.cc  OpaqueServer.cc  OpaqueServer.h  OpaqueServerRPC.cc  OpaqueServerRPC.h  OpaqueServerRPCTest.cc  OpaqueServerTest.cc  Protocol.cc  Server.cc  Server.h  ServerRPC.cc  ServerRPC.h  ServerRPCTest.cc  ServerTest.cc  ServiceMock.cc  ServiceMock.h  ThreadDispatchService.cc  ThreadDispatchService.h  ThreadDispatchServiceTest.cc
Server/: ClientService.cc  ClientService.h  ClientServiceTest.cc  ControlService.cc  ControlService.h  Globals.cc  Globals.h  GlobalsTest.cc  Main.cc  RaftConsensus.cc  RaftConsensus.h  RaftConsensusInvariants.cc  RaftConsensusTest.cc  RaftService.cc  RaftService.h  ServerStats.cc  ServerStats.h  ServerStatsTest.cc  StateMachine.cc  StateMachine.h  StateMachineTest.cc
Storage/: FilesystemUtil.cc  FilesystemUtilTest.cc  Layout.cc  Layout.h  LayoutTest.cc  Log.cc  Log.h  LogFactory.cc  LogFactoryTest.cc  MemoryLog.cc  MemoryLog.h  MemoryLogTest.cc  SegmentedLog.cc  SegmentedLog.h  SegmentedLogTest.cc  SimpleFileLog.cc  SimpleFileLog.h  SnapshotFile.cc  SnapshotFile.h  SnapshotFileTest.cc  Tool.cc
Tree/: ProtoBuf.cc  ProtoBuf.h  Tree.cc  Tree.h  TreeTest.cc
